--- a/client/views/profile/profile.html
+++ b/client/views/profile/profile.html
@@ -3,5 +3,12 @@
     {{> profile_header}}
     {{> profile_stats}}
     {{> profile_grid}}
+
+    <h2 class="profile-outro">
+      Go ahead. Have the best day of your life.<br />
+      <span>See you tomorrow!</span>
+    </h2>
+
   </div>
+
 </template>
