--- a/client/style/_helpers.scss
+++ b/client/style/_helpers.scss
@@ -12,7 +12,9 @@ $green: #25b399;
   $green-high: #53ecce;
 $blue: #50b7e3;
 $yellow: #ffc157;
+  $yellow-high: #ffea85;
 $borange: #ff905a;
+$red: #f56d85;
 
 $grey1: #312b2c;
 $grey2: #443f41;
@@ -116,3 +118,13 @@ $break-lg: 1200px;
     font-size:12px;
     font-family:"ratio";
 }
+
+
+// Isotope bug fix:
+.isotope,.isotope-item{
+  -webkit-transition-duration: 0s !important;
+     -moz-transition-duration: 0s !important;
+      -ms-transition-duration: 0s !important;
+       -o-transition-duration: 0s !important;
+          transition-duration: 0s !important;
+        }
