--- a/client/views/profile/profile_grid.html
+++ b/client/views/profile/profile_grid.html
@@ -1,7 +1,7 @@
 <template name="profile_grid">
   <div class="profile-grid"><div class="profile-grid-inner">
     {{#each stories}}
-    <a class="profile-grid-stories{{#if img}} img{{/if}} {{randomClasses}}" data-date="{{date}}" href="{{url}}">
+    <a class="profile-grid-stories{{#if img}} img{{/if}} {{randomClasses}}" data-date="{{date}}" href="/story/{{_id}}">
       {{#if img}}<div class="profile-grid-stories-img"><img src="{{imgUrl}}" /></div>{{/if}}
       <div class="profile-grid-stories-story">
         {{text}}
