--- a/client/views/journal.html
+++ b/client/views/journal.html
@@ -101,7 +101,7 @@
   <div class="details">
 
     <img class="profile-image" src="http://placehold.it/50x50" />
-    <a href="/{{screenName}}">{{displayName}}</a>'s besterday.
+    <a href="/user/{{screenName}}">{{displayName}}</a>'s besterday.
     <a class="pure-button button edit" href="#">Edit</a>
     <a class="pure-button button share" href="#">Share</a>
   </div>
@@ -111,7 +111,7 @@
   <div class="details">
 
     <img class="profile-image" src="http://placehold.it/50x50" />
-    <a href="/{{screenName}}">{{displayName}}</a>'s besterday. <a href="/">What's a besterday?</a>
+    <a href="/user/{{screenName}}">{{displayName}}</a>'s besterday. <a href="/">What's a besterday?</a>
     <a class="pure-button button make" href="/">Make your own.</a>
   </div>
 </template>
